css fix for span.white class on smaller devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -833,7 +833,7 @@ Media Queries
   }
 
   span.white {
-    color: $apple;
+    color: #fff;
   }
 
   .subpage-title {
